--- a/css/tvShow.css
+++ b/css/tvShow.css
@@ -28,7 +28,7 @@ html{
     top:1px;
 }
 .tvShow-page {
-    background-color: #0E0F11;
+    background-color: #000000;
 }
 
 .desktop-title{
@@ -229,13 +229,13 @@ html{
     .tvShow-page {
         margin:0;
         padding:0;
-        background-color:#0E0F11;
+        background-color: #000000;
         font-size:1em;
         width:auto;
     }
 
     .tvShow-bar{
-        background-color:#0E0F11;
+        background-color: #000000;
         display:inline-flex;
         width: 100%;
     }
@@ -349,6 +349,11 @@ html{
         padding: 0.6em 1.5em;
         text-decoration:none;
         text-shadow:0px 1px 0px #154682;
+    }
+
+    .tvShow-episodes-box{
+        margin-left:10%;
+        margin-right: 10%;
     }
 
 }
