Taponne pour tmdb dans la liste d'acteur

--- a/js/templates/actorThumbnail.html
+++ b/js/templates/actorThumbnail.html
@@ -1,7 +1,6 @@
 <div class="actorThumbnail">
-    <!--<img class="imageThumbnail" src="url({{imgActor}})"> -->
+    <img class="imageThumbnail" src="{{imgActor}}">
 
-        <img class="imageThumbnail" src="url(../../img/actor/noProfile.jpg">
 
     <div class="descriptionThumbnail">
 
