--- a/js/templates/movieThumbnail.html
+++ b/js/templates/movieThumbnail.html
@@ -5,7 +5,7 @@
         </div>
         <div class="movies-top-box">
             <div class="movies-header">
-                <h3 class="movies-title"> {{trackName}} </h3>
+                <p class="movies-title"> {{trackName}} </p>
                 <div class="initial-release-date">{{releaseYear}}</div>
             </div>
             <div class="movies-description">
