--- a/js/templates/movieThumbnail.html
+++ b/js/templates/movieThumbnail.html
@@ -10,6 +10,7 @@
             </div>
             <div class="movies-description">
                 <p class="movies-description-text">{{longDescription}}</p>
+                <span class="ellipsis">...</span>
             </div>
             <div class="movies-footer">
                 <div class="content-advisory-rating">{{contentAdvisoryRating}}</div>
