starting creation of the call to modify user info

--- a/css/style.css
+++ b/css/style.css
@@ -744,6 +744,7 @@ button {
     /* ------ PAGE CONTENT ------ */
     div #content {
         max-width: 100%;
+        margin-top: 10%;
         padding: 0;
         background-color: black;
         color: white;
