Add youtube movie for a tv show season page -  mobile

--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -63,7 +63,7 @@
                     <span class="tvShow-info-title-desktop">Summary:</span>
                     <span>{{longDescription}}</span>
                 </div>
-                <div class="tvShow-info-subject desktop-preview">
+                <div class="tvShow-info-subject ">
                     <span class="tvShow-info-title-desktop">Trailer:</span>
                     <span class="tvShow-info-preview">
                         <video width=100% controls>
@@ -117,10 +117,7 @@
 
     <div class="tvShow-preview">
         <span>Trailer</span>
-        <video width=100% controls>
-            <source src={{previewUrl}} type="video/m4v">
-            Your browser does not support HTML5 video.
-        </video>
+        <div class="tvShow-season-video-preview"></div>
     </div>
 
 </div>
