Change tvShow html to add youtube video in desktop format

--- a/js/templates/tvshow.html
+++ b/js/templates/tvshow.html
@@ -65,11 +65,7 @@
                 </div>
                 <div class="tvShow-info-subject ">
                     <span class="tvShow-info-title-desktop">Trailer:</span>
-                    <span class="tvShow-info-preview">
-                        <video width=100% controls>
-                            <source src={{previewUrl}} type="video/m4v">
-                            Your browser does not support HTML5 video.
-                        </video>
+                    <span class="tvShow-season-video-preview tvShow-info-preview">
                     </span>
                 </div>
 
