--- a/js/templates/pageHeader.html
+++ b/js/templates/pageHeader.html
@@ -3,8 +3,8 @@
     <div id="page-options">
         {{#each option}}
             <div class="watchlist-page-option">
-                <input id="{{optionClass}}-text" type="text" placeholder="Enter watchlist name"/>
-                <button disabled="disabled" id="{{optionClass}}-button" class="button-{{optionClass}}">{{action}}</button>
+                <input id="{{optionClass}}-text" class="submit-bar" type="text" placeholder="Enter watchlist name"/>
+                <button disabled="disabled" id="{{optionClass}}-button" class="button-{{optionClass}} submit-btn">{{action}}</button>
             </div>
         {{/each}}
     </div>
