Moves the watchlist title on desktop so that it isn't covered by the navbar

--- a/js/templates/pageHeader.html
+++ b/js/templates/pageHeader.html
@@ -1,4 +1,4 @@
-<h1>Your Watchlists</h1>
+<h1 class="watchlist-section-header">Your Watchlists</h1>
 <div>
     <div id="page-options">
         {{#each option}}
