--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -166,3 +166,35 @@
     border: none;
     border-radius: 4px;
 }
+
+@media (min-width: 960px) {
+    .watchlist-section-header {
+        margin-top: 4em;
+    }
+    
+    .watchlist-movies {
+        margin-left: 1em;
+        padding-left: 1em;
+
+        border: 1px solid #1B1D22;
+
+        width: 100%;
+        max-width: 600px;
+        display: flex;
+    }
+
+    .watchlist-movie {
+        display: flex;
+        flex-direction: column;
+        border: none;
+    }
+    
+    .watchlist-movie-select-box {
+        display: flex;
+    }
+
+    .delete-watchlist-movie-checkbox {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
