--- a/css/singleMoviePage.css
+++ b/css/singleMoviePage.css
@@ -58,6 +58,11 @@
     display: none;
 }
 
+iframe {
+    width: 100%;
+    height: 267px;
+}
+
 /* Summary and detailed information */
 .summary{
     padding: 0.6em 1em;
