--- a/css/singleMoviePage.css
+++ b/css/singleMoviePage.css
@@ -224,6 +224,10 @@ iframe {
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 }
 
+.mobile-watchlist {
+    margin: 1em 100px 1em 100px;
+}
+
 @media screen and (min-width: 768px) {
 
 }
