Adds gravatar icon

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -29,7 +29,7 @@
                 </span>
                 <button class="member-hamburger">
                     <div class="username">{{user}}</div>
-                    <img src="img/member_icon.png"/>
+                    <img class="user-icon" src="img/member_icon.png"/>
                 </button>
             </div>
             <div class="research-options collapsed">advanced research</div>
