--- a/css/movies.css
+++ b/css/movies.css
@@ -97,19 +97,12 @@
         border-bottom: none;
     }
 
-    .thumbnail{
-        position:relative;
-    }
-
     .thumbnail, .initial-image, .movies-thumbnail, .movies-box {
-        margin-left: auto;
-        margin-right: auto;
-        align-items: center;
-        flex: 1 1 100%;
-        /*min-width: 0; !* for Firefox and future Chrome etc. *!*/
+        min-width: 0; /*!* for Firefox and future Chrome etc. *!*/
         width: 100%;
-        max-width: 7em;
+        max-width: 8em;
         height: 100%;
+        max-height: 16em;
     }
 
     .movies-box {
@@ -119,34 +112,64 @@
         flex-wrap: nowrap;
         flex-direction: column;
         flex-flow: column;
-        justify-content: center;
-        align-content: center;
+        justify-content: space-around;
         align-items: stretch;
+    }
+
+    .movies-header {
+        align-self: flex-start;
+        width: 100%;
+    }
+
+    .movies-top-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-content: space-around;
+        align-items: flex-start;
     }
 
     .movies-title {
         white-space: normal;
+        font-size: 0.57em;
+        min-height: 0.1em;
+        height: 4em;
+        margin: 1em 0 -1.2em 0;
     }
 
-    .movies-footer{
-        vertical-align: bottom;
+    .initial-release-date {
+        float: right;
+        font-size: 0.6em;
+    }
+
+    .movies-description {
+        align-self: center;
     }
 
     .movies-description-text {
         white-space: normal;
-        text-overflow: ellipsis;
         font-size: 0.6em;
+        min-height: 0.1em;
         max-height: 7em;
         margin: 1em 0 -1.2em 0;
     }
 
-    .content-advisory-rating, .duration {
-        font-size: 0.6em;
+    .movies-footer {
+        display: flex;
+        flex-direction: row;
+        flex-basis: max-content;
+        justify-content: space-between;
+        align-self: stretch;
     }
 
-    .ellipsis{
+    .content-advisory-rating, .duration {
         font-size: 0.6em;
-        color:#B2B5BB;
+
+    }
+
+    .ellipsis {
+        font-size: 0.6em;
+        color: #B2B5BB;
     }
 
 }
