--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,4 +1,4 @@
-<img class="movie-banner" src="http://www.seriesandreviews.com/wp-content/uploads/2016/01/Young-adults-watching-TV.jpg"></img>
+<img class="movie-banner" src="http://www.seriesandreviews.com/wp-content/uploads/2016/01/Young-adults-watching-TV.jpg"/>
 <div class="text">
     <h1>Hello, welcome to UMovie.</h1>
     <h2>Get all the movies, TV shows and celebrities content in one place!</h2>
