Tentative de correction TMDB actorssss

--- a/js/templates/actorThumbnail.html
+++ b/js/templates/actorThumbnail.html
@@ -1,5 +1,5 @@
 <div class="actorThumbnail">
-    <img class="imageThumbnail" src="{{imgActor}}">
+    <img id="idTmpImg" class="imageThumbnail" src="{{imgActor}}">
 
 
     <div class="descriptionThumbnail">
@@ -9,7 +9,7 @@
         </h2>
 
         <div class="genreActorThumbnail"> Genre : {{primaryGenreName}}</div>
-        <div class="shortBio">{{shortenBio}}</div>
+        <div id="idTmpBio" class="shortBio">{{shortenBio}}</div>
 
     </div>
 
