--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -12,7 +12,7 @@
     <div class="information">
         <div class="actor-itunes">
 
-            <img class="imgActor" src="{{imgActor}}">
+            <img id="imgActor" src="{{imgActor}}">
 
             <a href="{{artistLinkUrl}}">
                 <div class="itunes">
@@ -24,7 +24,7 @@
 
         <div>
             <h2> Description :</h2>
-            <div class="description">{{biography}} </div>
+            <div id="description">{{biography}} </div>
         </div>
 
 
