--- a/css/style.css
+++ b/css/style.css
@@ -747,6 +747,7 @@ button {
         padding: 0;
         background-color: black;
         color: white;
+        margin-top: 10%;
     }
 
     #container {
