--- a/css/singleMoviePage.css
+++ b/css/singleMoviePage.css
@@ -8,6 +8,10 @@
     max-width:100%;
 }
 
+.content-title {
+    display: none;
+}
+
 /* Main information */
 .container-up-section {
     width: 100%;
@@ -49,7 +53,6 @@
 }
 
 .main-info{
-    /* margin: 0; */
     padding: 0.6em 0;
     background-color: #05052B;
 }
@@ -86,31 +89,31 @@ iframe {
     display: none;
 }
 
-.movie-info-name-icon {
+.content-name {
     background-image: url('../img/movie-tvShow-content/svg/name-icon.svg');
 }
 
-.movie-info-pgrating-icon {
+.content-rating {
     background-image: url('../img/movie-tvShow-content/svg/pgrating-icon.svg');
 }
 
-.movie-info-director-icon {
+.content-director {
     background-image: url('../img/movie-tvShow-content/svg/director-icon.svg');
 }
 
-.movie-info-productionhouse-icon {
+.content-studio {
     background-image: url('../img/movie-tvShow-content/svg/productionhouse-icon.svg');
 }
 
-.movie-info-writers-icon {
+.content-writers {
     background-image: url('../img/movie-tvShow-content/svg/writers-icon.svg');
 }
 
-.movie-info-language-icon{
+.content-language{
     background-image: url('../img/movie-tvShow-content/svg/language-icon.svg');
 }
 
-.movie-info-price-icon {
+.content-price {
     background-image: url('../img/movie-tvShow-content/svg/price-icon.svg');
 }
 
@@ -247,7 +250,7 @@ iframe {
         height:280px;
     }
 
-    .movie-info-name-icon {
+    .content-name {
         margin-top: -.5em;
     }
 
@@ -288,6 +291,7 @@ iframe {
     }
 
     .content-title {
+        display: block;
         margin: 0 0 2% 43%;
         font-size: 30px;
         color: darkgray;
