--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -2,16 +2,16 @@
     <title>{{name}}</title>
 </head>
 
-<div class="page-box movie-page">
+<div class="page-box">
 
     <!-- Title and background image -->
-    <div class="content-title desktop-title">{{trackName}}</div>
-    <div class="content-background-image movie-general-background">
+    <div class="content-title">{{trackName}}</div>
+    <div class="content-background-image">
         <img src="url(../../img/movie-tvShow-content/background-movie.png">
     </div>
 
     <!-- Main information -->
-    <div class="container-up-section movie-thumbnail-image">
+    <div class="container-up-section">
 
         <!-- Cover image and main information(duration, release year, country) -->
         <div class="cover-box">
@@ -23,59 +23,60 @@
                 </div>
             </div>
 
-            <div class="main-info movie-short-technical-info-desktop movie-short-general-info-desktop-group">
-                <div class="movie-length">{{convertDuration}}</div>
-                <div class="movie-year">{{releaseYear}}</div>
-                <div class="movie-country">{{country}}</div>
+            <div class="main-info">
+                <div class="content-length">{{convertDuration}}</div>
+                <div class="content-year">{{releaseYear}}</div>
+                <div class="content-country">{{country}}</div>
             </div>
         </div>
 
         <!-- Preview video box -->
-        <div class="preview-box movie-preview">
+        <div class="preview-box">
             <div class="preview-content-video movie-video-preview"></div>
         </div>
     </div>
 
-    <!-- Summary and detailed information - Need refactor with Handlebars-->
+    <!-- Summary and detailed information -->
     <div class="container-down-section">
+
         <div class="summary">
             <span>Summary:</span>
             {{longDescription}}
         </div>
 
-        <div class="detailed-info movie-info-box-desktop">
+        <div class="detailed-info">
             <div class="detailed-info-subject">
-                <span class="movie-info-name-icon icon"></span>
+                <span class="content-name icon"></span>
                 <span>Title: </span>
                 {{trackName}}
             </div>
             <div class="detailed-info-subject">
-                <span class="movie-info-pgrating-icon icon"></span>
+                <span class="content-rating icon"></span>
                 <span>Rating: </span>
                 Rated {{contentAdvisoryRating}}
             </div>
             <div class="detailed-info-subject">
-                <span class="movie-info-director-icon icon"></span>
+                <span class="content-director icon"></span>
                 <span>Director: </span>
                 {{artistName}}
             </div>
             <div class="detailed-info-subject">
-                <span class="movie-info-productionhouse-icon icon"></span>
+                <span class="content-studio icon"></span>
                 <span>Studio: </span>
                 {{productionHouse}}
             </div>
             <div class="detailed-info-subject">
-                <span class="movie-info-writers-icon icon"></span>
+                <span class="content-writers icon"></span>
                 <span>Writer: </span>
                 {{writers}}
             </div>
             <div class="detailed-info-subject">
-                <span class="movie-info-language-icon icon"></span>
+                <span class="content-language icon"></span>
                 <span>Language: </span>
                 {{language}}
             </div>
             <div class="detailed-info-subject">
-                <span class="movie-info-price-icon icon"></span>
+                <span class="content-price icon"></span>
                 <span>Price: </span>
                 {{trackPrice}} {{currency}}
             </div>
